<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="total_amt_spent">Total amount spent this month</string>
    <string name="hint_expense_type">Expense Type</string>
    <string name="hint_expense_amt">Expense Amount</string>
    <string name="hint_expense_remarks">Remarks</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">%1$.2f %2$s </string>
    <string name="expense_amount">%1$s %2$s</string>
    <string name="expense_type">Type : %1$s</string>
    <string name="expense_remarks">Remarks : %1$s</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="settings">Settings</string>
    <string name="monthly_income_title">Enter Monthly Income</string>
    <string name="edit_income">Edit Income</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="m_income">%1$s %2$s </string>
    <string name="exceeded_expense_limit">%1$.2f %2$s </string>
    <string name="expense_saved">Expense Saved Successfully</string>
    <string name="choose_a_payment_mode_default_is_cash">Choose a Payment mode!. Default is cash</string>
    <string name="expense_exceed">Expense for month exceeds by</string>
    <string name="enter_date">Choose Date. Current date is set by default</string>
    <string name="date_mask">mm/dd/yyyy</string>
    <string name="date_picker">Date Picker</string>
    <string name="edit_date_field">Edit Date</string>

    <string-array name="payment_type">
        <item>Cash</item>
        <item>Debit Card</item>
        <item>Credit Card</item>
        <item>UPI Payment</item>
        <item>NetBanking</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spent_atleast_once">Need to have spent amount atleast once</string>
    <string name="expense">Expense</string>
    <string name="line_chart">Line Chart</string>


</resources>
