<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="me.raghu.expensetracker.ui.ExpenseInputViewModel"/>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/type"
                app:errorEnabled="true"
                app:error="@{viewModel.expenseTypeError}"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_16dp"
                android:layout_marginLeft="@dimen/standard_16dp"
                android:layout_marginTop="@dimen/standard_16dp"
                android:layout_marginEnd="@dimen/standard_16dp"
                android:layout_marginRight="@dimen/standard_16dp"
                android:hint="@string/hint_expense_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/expense_type"
                    binding = "@{viewModel.expenseType}"
                    hideKeyboardOnInputDone="@{true}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:error="@{viewModel.amountError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_16dp"
                android:layout_marginLeft="@dimen/standard_16dp"
                android:layout_marginTop="@dimen/standard_16dp"
                android:layout_marginEnd="@dimen/standard_16dp"
                android:layout_marginRight="@dimen/standard_16dp"
                android:hint="@string/hint_expense_amt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amt"
                    binding = "@{viewModel.amount}"
                    hideKeyboardOnInputDone="@{true}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/remarks"
                android:gravity="top|start"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:error="@{viewModel.remarksError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_16dp"
                android:layout_marginLeft="@dimen/standard_16dp"
                android:layout_marginTop="@dimen/standard_16dp"
                android:layout_marginEnd="@dimen/standard_16dp"
                android:layout_marginRight="@dimen/standard_16dp"
                android:hint="@string/hint_expense_remarks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rm"
                    android:gravity="top|start"
                    binding = "@{viewModel.remarks}"
                    hideKeyboardOnInputDone="@{true}"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addExpenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remarks" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>